# mcp-server-foundry

./: pyproject.toml
